data/derived/comb/progs/unify/prog0073.ml.out
Characters 8-17:
  let _ = max_float(100.0);;
          ^^^^^^^^^
Error: This expression has type float
       This is not a function; it cannot be applied.
